include/pamc204.h

#ifndef PAMC204_H
#define PAMC204_H

#include <string>

// ============================================================================
// C++ API
// ============================================================================

namespace pamc204
{
    /**
     * @brief 汎用コマンド送信（低レベルAPI）
     * @param command コマンド文字列
     * @return 成功時 true、失敗時 false
     */
    bool send_command(const std::string &command);

    // ========================================================================
    // 高レベルAPI（個別コマンド専用関数）
    // ========================================================================

    /**
     * @brief ファームウェアバージョンを取得（ExxINF）
     */
    bool get_firmware_version(int address);

    /**
     * @brief デバイスの存在確認（Exx）
     */
    bool check_device(int address);

    /**
     * @brief デバイスアドレスを変更（SETADDRxx）
     */
    bool set_address(int new_address);

    /**
     * @brief 出力電圧を設定（ExxDACnnnn）
     * @param voltage_dac DAC値（1900=70V, 2200=80V, 2450=90V, 2700=100V, 3000=110V, 3200=120V, 3450=130V, 3750=140V, 4095=150V）
     */
    bool set_voltage(int address, int voltage_dac);

    /**
     * @brief 正回転駆動（ExxNRnnnnyyyyz）
     * @param frequency 周波数（1-1500 Hz）
     * @param pulses パルス数（0=連続駆動, 1-9999）
     * @param channel チャンネル（'A'=CH1, 'B'=CH2, 'C'=CH3, 'D'=CH4）
     */
    bool rotate_positive(int address, int frequency, int pulses, char channel);

    /**
     * @brief 正回転駆動・拡張パルス数（ExxNRnnnnXyyyyyyz）
     * @param pulses パルス数（1-999999）
     */
    bool rotate_positive_ex(int address, int frequency, int pulses, char channel);

    /**
     * @brief 逆回転駆動（ExxRRnnnnyyyyz）
     */
    bool rotate_negative(int address, int frequency, int pulses, char channel);

    /**
     * @brief 逆回転駆動・拡張パルス数（ExxRRnnnnXyyyyyyz）
     */
    bool rotate_negative_ex(int address, int frequency, int pulses, char channel);

    /**
     * @brief モーター停止（ExxS）
     */
    bool stop(int address);

    /**
     * @brief モーション停止（ExxAB）
     * @param address ドライバアドレス（1-32）
     */
    bool abort_motion(int address);

    /**
     * @brief 加速度設定（ExxmACnnnn）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     * @param acceleration 加速度（1-150000 steps/sec²）
     */
    bool set_acceleration(int address, int channel, int acceleration);

    /**
     * @brief 加速度問い合わせ（ExxmAC?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_acceleration(int address, int channel);

    /**
     * @brief 速度設定（ExxmVAnnnn）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     * @param velocity 速度（1-1500 steps/sec）
     */
    bool set_velocity(int address, int channel, int velocity);

    /**
     * @brief 速度問い合わせ（ExxmVA?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_velocity(int address, int channel);

    /**
     * @brief ホームポジション設定（ExxmDHnnnn）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     * @param position ホームポジション（-2147483648 ~ +2147483647）
     */
    bool set_home_position(int address, int channel, int position);

    /**
     * @brief ホームポジション問い合わせ（ExxmDH?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_home_position(int address, int channel);

    /**
     * @brief 絶対位置移動（ExxmPAnnnn）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     * @param position 絶対位置（-2147483648 ~ +2147483647）
     */
    bool move_absolute(int address, int channel, int position);

    /**
     * @brief 絶対位置問い合わせ（ExxmPA?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_absolute_position(int address, int channel);

    /**
     * @brief 相対位置移動（ExxmPRnnnn）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     * @param position 相対位置（-2147483648 ~ +2147483647）
     */
    bool move_relative(int address, int channel, int position);

    /**
     * @brief 相対位置問い合わせ（ExxmPR?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_relative_position(int address, int channel);

    /**
     * @brief 実位置問い合わせ（ExxmTP?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_actual_position(int address, int channel);

    /**
     * @brief 動作状態確認（ExxmMD?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_motion_status(int address, int channel);

    /**
     * @brief 無限移動（ExxmMVn）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     * @param direction 方向（'+' または '-'）
     */
    bool move_infinite(int address, int channel, char direction);

    /**
     * @brief 移動方向問い合わせ（ExxmMV?）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool query_move_direction(int address, int channel);

    /**
     * @brief 動作停止（ExxmST）
     * @param address ドライバアドレス（1-32）
     * @param channel チャンネル（1-4）
     */
    bool stop_motion(int address, int channel);
}

// ============================================================================
// C API（extern "C"）
// ============================================================================

#ifdef __cplusplus
extern "C"
{
#endif

    // 低レベルAPI
    bool pamc204_send_command(const char *command);

    // 高レベルAPI
    bool pamc204_get_firmware_version(int address);
    bool pamc204_check_device(int address);
    bool pamc204_set_address(int new_address);
    bool pamc204_set_voltage(int address, int voltage_dac);
    bool pamc204_rotate_positive(int address, int frequency, int pulses, char channel);
    bool pamc204_rotate_positive_ex(int address, int frequency, int pulses, char channel);
    bool pamc204_rotate_negative(int address, int frequency, int pulses, char channel);
    bool pamc204_rotate_negative_ex(int address, int frequency, int pulses, char channel);
    bool pamc204_stop(int address);
    bool pamc204_abort_motion(int address);
    bool pamc204_set_acceleration(int address, int channel, int acceleration);
    bool pamc204_query_acceleration(int address, int channel);
    bool pamc204_set_velocity(int address, int channel, int velocity);
    bool pamc204_query_velocity(int address, int channel);
    bool pamc204_set_home_position(int address, int channel, int position);
    bool pamc204_query_home_position(int address, int channel);
    bool pamc204_move_absolute(int address, int channel, int position);
    bool pamc204_query_absolute_position(int address, int channel);
    bool pamc204_move_relative(int address, int channel, int position);
    bool pamc204_query_relative_position(int address, int channel);
    bool pamc204_query_actual_position(int address, int channel);
    bool pamc204_query_motion_status(int address, int channel);
    bool pamc204_move_infinite(int address, int channel, char direction);
    bool pamc204_query_move_direction(int address, int channel);
    bool pamc204_stop_motion(int address, int channel);

#ifdef __cplusplus
}
#endif

#endif // PAMC204_H